create basic serializer

--- a/M5Chorder/platformio.ini
+++ b/M5Chorder/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
   M5Stack_TreeView
   M5Stack-SD-Updater
   M5Stack_OnScreenKeyboard
+  ArduinoJson
 
 [env:m5stack-fire]
 platform = espressif32
