--- a/M5Chorder/platformio.ini
+++ b/M5Chorder/platformio.ini
@@ -13,9 +13,9 @@ env_default = m5stack-fire
 
 [common_env_data]
 lib_deps =
-  M5Stack
+  m5stack/M5Stack
   M5Stack_TreeView
-  M5Stack-SD-Updater
+  M5Stack-SD-Updater @ ^0.4.1
   M5Stack_OnScreenKeyboard
   ArduinoJson
 
